# pay_platform

customers/: .gitignore  pyproject.toml
customers/src/: config.py  exceptions.py  main.py
customers/src/auth/: auth.py  routers.py
customers/src/customers/: dao.py  dependencies.py  produser.py  routers.py  schemas.py
customers/src/dao/: base.py
database/: docker-compose.yml  pyproject.toml
database/src/: config.py  database.py  main.py
database/src/alembic/: env.py
database/src/alembic/versions/: 7e263082f6fb_initial.py
database/src/customers/: consumer.py  dao.py  handler.py  models.py  schemas.py
database/src/dao/: base.py
database/src/payments/: consumers.py  handler.py  models.py
payments/requirements/: base.txt
payments/src/: config.py  main.py
payments/src/payments/: dependencies.py  produser.py  routers.py  schemas.py
payments/src/services/customers/: service.py
payments/src/services/payadmit/: enums.py  service.py
